fixed spacing tags in request

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -521,7 +521,7 @@ h3{
 }
 
 .tagShow {
-  margin-top: 22px;
+  margin-top: 5px;
 }
 
 .tagShow > span {
@@ -532,7 +532,7 @@ h3{
 }
 
 .reqtag{
-  margin-top: 30px;
+  margin-top: 26px;
 }
 
 .fa-bookmark{
